[gd_scene load_steps=7 format=2]

[ext_resource path="res://Asset/Other/fontbig.tres" type="DynamicFont" id=1]
[ext_resource path="res://Asset/Background/backgroundlevel1.png" type="Texture" id=2]
[ext_resource path="res://Script/Menu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Sprite" type="Sprite" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0

[node name="Play_But" type="Button" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.588235, 0.588235, 0.588235, 1 )
custom_colors/font_color_pressed = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "play"
expand_icon = true

[node name="Exit_But" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.588235, 0.588235, 0.588235, 1 )
custom_colors/font_color_pressed = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "exit"
expand_icon = true

[connection signal="pressed" from="VBoxContainer/Play_But" to="." method="_on_Play_But_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit_But" to="." method="_on_Exit_But_pressed"]
